--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "recharts": "latest"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "playwright": "^1.57.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
